Pseudo-Merge b34361f Fix error-prone violations (#683)
commit b34361f6ef94a6f1c5d11b7816c59ac251da63d5
Author:     Régis Décamps <regisd@google.com>
AuthorDate: Sat Dec 14 12:08:16 2019 +0100
Commit:     GitHub <noreply@github.com>
CommitDate: Sat Dec 14 12:08:16 2019 +0100

    Fix error-prone violations (#683)

    * Increase many error-prone checks from WARN to ERROR

    * Exclude third_party and generated code from checks

    * Fix error-prone TruthConstantAsserts

      Follow-up of #660 that reveals some jUnit assertions where inverting expected and actual.

    * Fix error-prone AssertionFailureIgnored

    * Fix error-prone ThrowsUncheckedException in initthrow_eol

    * Fix error-prone ThrowsUncheckedException

    * Fix error-prone ThrowsUncheckedException

      Make MacroException a checked exception

    * Fix error-prone ThrowsUncheckedException

    * Fix error-prone ClassCanBeStatic

    * Fix error-prone BoxedPrimitiveConstructor

      The problem was with new Integer(). Replaced by Integer.valueOf().

    * Show error-prone warnings for CatchAndPrintStackTrace, DefaultCharSet, DeprecatedThreadMethods, IncrementInForLoopAndHeader, JdkObsolete, MissingOverride, FieldCanBeFinal, RemoveUnusedImports

    * expandMacro can throw a MacroException

    * Declare that IntCharSet implements Comparable<IntCharSet>

      The compare() method already exists.

    * Extract IntCharSetComparator

Updated from target/jflex-parent-1.8.0-SNAPSHOT-sources.jar